# noteamountgen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
SightRead/: CMakeLists.txt
SightRead/.github/workflows/: tests.yml
SightRead/include/sightread/: tempomap.hpp  time.hpp
SightRead/src/sightread/: tempomap.cpp
SightRead/src/sightread/detail/: midi.cpp
SightRead/tests/sightread/: tempomap_unittest.cpp
include/: chart_info.hpp  chart_writer.hpp  ini_parser.hpp  loop_generator.hpp
src/: chart_info.cpp  chart_writer.cpp  loop_generator.cpp  main.cpp
